--- a/api/Procfile
+++ b/api/Procfile
@@ -2,4 +2,5 @@ val: uvicorn --port $PORT validate:app --reload
 ans: uvicorn --port $PORT answer:app --reload
 sts: uvicorn --port $PORT stats:app --reload
 red: uvicorn --port $PORT redis_connect:app --reload
+exp: uvicorn --port $PORT exposedAPI:app --reload
 tfk: ./traefik --configFile=traefik.toml
